; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-cgroup-util.c_test_cg_tests.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-cgroup-util.c_test_cg_tests.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ENOMEDIUM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [32 x i8] c"Skipping cg hierarchy tests: %m\00", align 1
@SYSTEMD_CGROUP_CONTROLLER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_cg_tests to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_cg_tests() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = call i32 (...) @cg_unified()
  store i32 %5, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @ENOMEDIUM, align 4
  %8 = sub nsw i32 0, %7
  %9 = icmp eq i32 %6, %8
  br i1 %9, label %10, label %13

10:                                               ; preds = %0
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @log_notice_errno(i32 %11, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0))
  br label %59

13:                                               ; preds = %0
  %14 = load i32, i32* %4, align 4
  %15 = icmp sge i32 %14, 0
  %16 = zext i1 %15 to i32
  %17 = call i32 @assert_se(i32 %16)
  %18 = call i32 (...) @cg_all_unified()
  store i32 %18, i32* %1, align 4
  %19 = load i32, i32* %1, align 4
  %20 = call i32 @IN_SET(i32 %19, i32 0, i32 1)
  %21 = call i32 @assert_se(i32 %20)
  %22 = call i32 (...) @cg_hybrid_unified()
  store i32 %22, i32* %2, align 4
  %23 = load i32, i32* %2, align 4
  %24 = call i32 @IN_SET(i32 %23, i32 0, i32 1)
  %25 = call i32 @assert_se(i32 %24)
  %26 = load i32, i32* @SYSTEMD_CGROUP_CONTROLLER, align 4
  %27 = call i32 @cg_unified_controller(i32 %26)
  store i32 %27, i32* %3, align 4
  %28 = load i32, i32* %3, align 4
  %29 = call i32 @IN_SET(i32 %28, i32 0, i32 1)
  %30 = call i32 @assert_se(i32 %29)
  %31 = load i32, i32* %1, align 4
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %33, label %41

33:                                               ; preds = %13
  %34 = load i32, i32* %3, align 4
  %35 = call i32 @assert_se(i32 %34)
  %36 = load i32, i32* %2, align 4
  %37 = icmp ne i32 %36, 0
  %38 = xor i1 %37, true
  %39 = zext i1 %38 to i32
  %40 = call i32 @assert_se(i32 %39)
  br label %59

41:                                               ; preds = %13
  %42 = load i32, i32* %2, align 4
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %44, label %52

44:                                               ; preds = %41
  %45 = load i32, i32* %3, align 4
  %46 = call i32 @assert_se(i32 %45)
  %47 = load i32, i32* %1, align 4
  %48 = icmp ne i32 %47, 0
  %49 = xor i1 %48, true
  %50 = zext i1 %49 to i32
  %51 = call i32 @assert_se(i32 %50)
  br label %58

52:                                               ; preds = %41
  %53 = load i32, i32* %3, align 4
  %54 = icmp ne i32 %53, 0
  %55 = xor i1 %54, true
  %56 = zext i1 %55 to i32
  %57 = call i32 @assert_se(i32 %56)
  br label %58

58:                                               ; preds = %52, %44
  br label %59

59:                                               ; preds = %10, %58, %33
  ret void
}

declare dso_local i32 @cg_unified(...) #1

declare dso_local i32 @log_notice_errno(i32, i8*) #1

declare dso_local i32 @assert_se(i32) #1

declare dso_local i32 @cg_all_unified(...) #1

declare dso_local i32 @IN_SET(i32, i32, i32) #1

declare dso_local i32 @cg_hybrid_unified(...) #1

declare dso_local i32 @cg_unified_controller(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
